# nixos-autodeploy

./: .gitignore  Cargo.toml  LICENSE  README.md  auto-deploy.sh  flake.nix  module.nix  package.nix  renovate.json  test.nix
.github/workflows/: ci.yaml  test.yaml
src/: cli.rs  exec.rs  main.rs  metrics.rs
